--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,59 +1,59 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;600;700&display=swap');
 
 body {
   background: #f2f2f2;
   color: #333;
-  font-family: "Nunito";
+  // font-family: "Nunito";
 
   a {
     color: #333;
     text-decoration: none;
   }
 
-  .content {
-    margin: 0 auto;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    flex-wrap: nowrap;
-    justify-content: stretch;
+  // .content {
+  //   margin: 0 auto;
+  //   height: 100vh;
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: stretch;
+  //   flex-wrap: nowrap;
+  //   justify-content: stretch;
   
-    .container {
-      flex: 1 1;
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: stretch;
-      justify-content: space-between;
+  //   .container {
+  //     flex: 1 1;
+  //     flex: 1;
+  //     display: flex;
+  //     flex-direction: column;
+  //     align-items: stretch;
+  //     justify-content: space-between;
   
-      nav {
-        /* margin: 10px auto 80px; */
-        padding: 10px 0;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
-        border-bottom: 1px solid #ddd;
+  //     nav {
+  //       /* margin: 10px auto 80px; */
+  //       padding: 10px 0;
+  //       display: flex;
+  //       justify-content: flex-end;
+  //       align-items: flex-end;
+  //       border-bottom: 1px solid #ddd;
       
-        a {
-          margin-left: 12px;
-        }
+  //       a {
+  //         margin-left: 12px;
+  //       }
       
-        .logo {
-          margin-right: auto;
-        }
-      }
+  //       .logo {
+  //         margin-right: auto;
+  //       }
+  //     }
       
-      footer {
-        display: block;
-        text-align: center;
-        padding: 30px 0;
-        margin-top: 60px;
-        color: #777;
-        border-top: 1px solid #eaeaea;
-      }
-    }
-  }
+  //     footer {
+  //       display: block;
+  //       text-align: center;
+  //       padding: 30px 0;
+  //       margin-top: 60px;
+  //       color: #777;
+  //       border-top: 1px solid #eaeaea;
+  //     }
+  //   }
+  // }
 
 }
 
